--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     </head>
     <body>
         <h1>Hello World</h1>
+        <h2>git init</h2>
         <h2>git status</h2>
         <h2>git add .</h2>
         <h2>git commit -m "Initial commit of files"</h2>
         <h2>git push</h2>
+        <h2>git remote add origin https://github.com/Lanshissh/sample.git</h2>
+        <h2>git branch -M main</h2>
+        <h2>git push -u origin main</h2>
     </body>
 </html>
