--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <marquee direction="right" behavior="alternate">
         <h1>Hello World</h1>
+        </marquee>
         <h2>git init</h2>
         <h2>git status</h2>
         <h2>git add .</h2>
